# mindfresh

./: .gitignore  README.ko.md  README.md  install.sh  pyproject.toml
docs/operations/: GIT_WORKFLOW.md  PHASES.md  TESTING.md
docs/plans/: prd-markdown-knowledge-refresh.md  ralplan-markdown-knowledge-refresh.md  test-spec-markdown-knowledge-refresh.md
docs/specs/: deep-interview-markdown-knowledge-refresh.md
mindfresh/: __init__.py  adapters.py  chunker.py  cli.py  config.py  demo.py  manifest.py  model_presets.py  onboarding.py  refresh.py  scanner.py  schemas.py  validation.py  vaults.py  watch.py  writer.py
tests/: conftest.py  test_config.py  test_config_ux.py  test_demo.py  test_installer.py  test_large_context_preservation.py  test_live_adapters.py  test_manifest.py  test_merge_adapter.py  test_onboarding_contract.py  test_onboarding_state.py  test_refresh_integration_contract.py  test_refresh_pipeline.py  test_runtime_validation.py  test_scanner.py  test_scanner_boundaries.py  test_watch_contract.py  test_writer.py
